deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boussole
spec:
  type: ClusterIP
  selector:
    app: boussole
  ports:
    - port: 8000
      targetPort: 8000
